[package]
name = "cv"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
crossbeam = "0.8.1"
image = "0.24.1"
gif = "0.11.0"
indicatif = "0.16"
clap = "2.34.0"
winapi = { version = "0.3.9", features = ["winuser"] }
egui = "0.24.1"
eframe = "0.24.1"
plotters = "0.3.4"
egui_extras={version="0.24.1",features=["default","all_loaders"]}


